내 친구 필터기능 완성(취미/언어에 따른 필터, 나이 범위필터)